--- a/Misc_Code.ipynb
+++ b/Misc_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzwRemyKNuOqRFUap81zq3",
+      "authorship_tag": "ABX9TyM1Dgce/NmLCiX5pVu1Sh+6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -391,8 +391,21 @@
         "column in those rows to 1. Essentially, it's encoding the 'latitude' column into a new binary column\n",
         " where 1 indicates a meaningless.\"\"\"\n",
         "\n",
-        "pd.crosstab(df[\"latitude\"], df[\"meaningless\"])"
+        "pd.crosstab(df[\"latitude\"], df[\"meaningless\"])\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.apply(pd.unique)   #this is how to apply the unique function to every column in a dataframe"
+      ],
+      "metadata": {
+        "id": "mnNrJrNth3IZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
